@@ -19,7 +19,8 @@ import com.j256.ormlite.table.TableInfo;
  */
 public class DeleteBuilder<T, ID> extends StatementBuilder<T, ID> {
 
-	// NOTE: any fields here should be added to the clear() method below
+	private Long limit;
+	// NOTE: any fields here should be added to the reset() method below
 
 	public DeleteBuilder(DatabaseType databaseType, TableInfo<T, ID> tableInfo, Dao<T, ID> dao) {
 		super(databaseType, tableInfo, dao, StatementType.DELETE);
@@ -30,7 +31,7 @@ public class DeleteBuilder<T, ID> extends StatementBuilder<T, ID> {
 	 * the where or make other calls you will need to re-call this method to re-prepare the statement for execution.
 	 */
 	public PreparedDelete<T> prepare() throws SQLException {
-		return super.prepareStatement(null, false);
+		return super.prepareStatement(limit, false);
 	}
 
 	/**
@@ -40,18 +41,30 @@ public class DeleteBuilder<T, ID> extends StatementBuilder<T, ID> {
 		return dao.delete(prepare());
 	}
 
+	/**
+	 * Limit the rows affected to maxRows maximum number of rows. Set to null for no limit (the default).
+	 */
+	public DeleteBuilder<T, ID> limit(Long maxRows) {
+		limit = maxRows;
+		return this;
+	}
+
 	@Override
 	public void reset() {
 		// NOTE: this is here because it is in the other sub-classes
 		super.reset();
+		limit = null;
 	}
 
 	@Override
 	protected void appendStatementStart(StringBuilder sb, List<ArgumentHolder> argList) {
 		sb.append("DELETE FROM ");
-		if (tableInfo.getSchemaName() != null && tableInfo.getSchemaName().length() > 0){
+		if (tableInfo.getSchemaName() != null && tableInfo.getSchemaName().length() > 0) {
 			databaseType.appendEscapedEntityName(sb, tableInfo.getSchemaName());
 			sb.append('.');
+		}
+		if (databaseType.isLimitAfterDeleteSupported()) {
+			appendLimit(sb);
 		}
 		databaseType.appendEscapedEntityName(sb, tableInfo.getTableName());
 		sb.append(' ');
@@ -59,6 +72,14 @@ public class DeleteBuilder<T, ID> extends StatementBuilder<T, ID> {
 
 	@Override
 	protected void appendStatementEnd(StringBuilder sb, List<ArgumentHolder> argList) {
-		// noop
+		if (databaseType.isLimitDeleteAtEndSupported()) {
+			appendLimit(sb);
+		}
+	}
+
+	private void appendLimit(StringBuilder sb) {
+		if (limit != null) {
+			databaseType.appendUpdateLimitValue(sb, limit);
+		}
 	}
 }
